# dtcc-builder

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py  test.py
bench/: README.md  dtcc-bench-postprocess  dtcc-bench-run  dtcc-bench-run-parameter  dtcc-demo-profile  dtcc-gs-bench-run
dtcc-pybuilder/: CMakeLists.txt  dtcc-build  dtcc-generate-citymodel.py  setup.py
dtcc-pybuilder/dtcc-pybindings/src/: pybind_builder.cpp
dtcc-pybuilder/dtcc/builder/: CityModel.py  ElevationModel.py  Meshing.py  PointCloud.py  __init__.py
dtcc-pybuilder/dtccpybuilder/: CityModel.py  ElevationModel.py  Meshing.py  Parameters.py  PointCloud.py  Utils.py
dtcc-pybuilder/dtccpybuilder/test/: test_citymodel.py  test_meshing.py  test_pointcloud.py
dtcc-pybuilder/test/: test_citymodel.py  test_elevationmodel.py
dtcc-randomize-citymodel/: CMakeLists.txt  dtcc-randomize-citymodel.cpp
pybuilder/: CMakeLists.txt  CityModel.py  CityModelGenerator.py  ElevationModel.py  Meshing.py  Parameters.py  PointCloud.py  dtcc-generate-citymodel.py  setup.py
pybuilder/pybindings/src/: pybind_builder.cpp
pybuilder/pybuilder/: CityModel.py  ElevationModel.py  Meshing.py  Parameters.py  PointCloud.py  Utils.py
pybuilder/pybuilder/test/: test_citymodel.py  test_elevationmodel.py  test_meshing.py  test_pointcloud.py
pybuilder/test/: test_citymodel.py  test_elevationmodel.py  test_meshing.py  test_pointcloud.py
sandbox/mesh-layering-2023/: CMakeLists.txt  mesh_layering.py  plot_tets.py
sandbox/mesh-layering-2023/cpp/: mesh_layering.cpp
sandbox/mesh-layering-2023/cpp/include/: FaceColoring.h  MeshLayering.h
sandbox/profiling/: CMakeLists.txt  SmootherProfiling.cpp
sandbox/profiling/include/: utils.h
sandbox/protobuf-bench-2022/: CMakeLists.txt  Logging.h  Mesh.h  Table.h  Timer.h  dtcc.proto  generate-protobuf  protobuf-bench.cpp
src/: CMakeLists.txt  file_sharing.py  pybind_builder.cpp  redis_pub.py  redis_service.py  redis_sub.py  redis_tools.py
src/cpp/: builder_bindings.cpp  dtcc_builder.cpp  pybind_builder.cpp
src/cpp/include/: BoundaryConditions.h  BoundingBox.h  BoundingBoxTree.h  BuildingProcessor.h  CityBuilder.h  CityModelGenerator.h  CityProcessor.h  Color.h  Constants.h  ElevationBuilder.h  ElevationModelGenerator.h  GEOS.h  GeoRaster.h  Geometry.h  Grid.h  Hashing.h  JSON.h  KDTreeVectorOfVectorsAdaptor.h  Laplacian.h  LaplacianSmoother.h  Logging.h  MeshBuilder.h  MeshGenerator.h  MeshIO.h  MeshProcessor.h  MeshQualityMetrics.h  Parameter.h  PointCloudProcessor.h  Polyfix.h  Protobuf.h  RoofSegmentation.h  Smoother.h  StiffnessMatrix.h  Table.h  Timer.h  Utils.h  VTK.h  Vector.h  VertexSmoother.h
src/cpp/include/datamodel/: BaseArea.h
src/cpp/include/model/: Building.h  City.h  CityModel.h  Color.h  GeoRaster.h  Grid.h  GridField.h  Mesh.h  Point.h  PointCloud.h  Polygon.h  Simplices.h  Surface.h  Vector.h  VolumeMesh.h
src/dtcc_builder/: Build.py  CityModel.py  ElevationModel.py  Meshing.py  Parameters.py  PointCloud.py  Utils.py  _PointCloud.py  __init__.py  build.py  builder.py  builder_datamodel.py  builders.py  city_methods.py  city_processing.py  dtcc-build.py  logging.py  meshing.py  methods.py  model.py  parameters.py  pointcloud_methods.py  pointcloud_processing.py  register.py
src/dtcc_builder/building/: modify.py
src/dtcc_builder/city/: __init__.py  modify.py
src/dtcc_builder/geometry/:  multisurface.py  __init__.py  multisurface.py  surface.py
src/dtcc_builder/geometry_builders/: build_surface_mesh.sketch  buildings.py  meshes.py  surface.py  terrain.py
src/dtcc_builder/meshing/: __init__.py  meshing.py
src/dtcc_builder/pointcloud/: __init__.py  convert.py  filter.py
src/dtcc_builder/polygons/: polygons.py
src/dtcc_builder/raster/: __init__.py  analyse.py  burn.py  interpolation.py  stats.py
src/dtcc_builder/scripts/: dtcc_build.py
src/include/: Field.h  GridField.h  GridVectorField.h  Laplacian.h  Protobuf.h  VectorField.h
src/include/datamodel/: Building.h
tests/cpp/: CMakeLists.txt  run-tests.cpp
tests/cpp/tests/: TestBoundingBox.h  TestBuilding.h  TestCity.h  TestCityModel.h  TestDatamodel.h  TestGEOS.h  TestGrid.h  TestPointcloud.h  TestPolygon.h  TestUUID.h  TestUtils.h
unittests/: CMakeLists.txt  XMLExampleFile.xml  run-unittests.cpp
unittests/data/: CityModelExample.json  CityModelExample1.json  CityModelExample2.json  CityModelExampleData.json
unittests/data/MinimalCase/: Parameters.json
unittests/data/buildings/: test_buildings.dbf  test_buildings.shp  test_buildings.shx
unittests/data/create-uuid-propertymap/: PropertyMap.dbf  PropertyMap.prj  PropertyMap.shp  PropertyMap.shx
unittests/data/duplicate-shp-uuids/: by_14.shp
unittests/data/geojson-to-roadnetwork/: RoadNetwork.json
unittests/data/parameters/: Hammarkullen2020.json  Hammarkullen2020_autodomain.json
unittests/data/read-from-csv-instead-of-laz/: PointCloudTest.csv
unittests/data/roadNetwork/: vl_riks.shx
unittests/data/roadnetwork-central-gbg/: vl_riks.dbf  vl_riks.fix  vl_riks.prj  vl_riks.shp  vl_riks.shx
unittests/data/roadnetwork-torslanda/: vl_riks.shp
unittests/tests/: TestBoundingBox.h  TestBuilding.h  TestCityModel.h  TestColormaps.h  TestDatamodel.h  TestGEOS.h  TestGrid.h  TestParameters.h  TestPointcloud.h  TestPolygon.h  TestProtobufConversion.h  TestRoadnetworks.h  TestRoofSegmentation.h  TestSHP.h  TestUUID.h  TestUtils.h  TestXMLParser.h
unittests/xml-parser-test-files/: XMLExampleFile.xml  XMLExampleFile1.xml  XMLExampleFile2.xml  XMLExampleFile3.xml  XMLExampleFileSimple.xml
vc-generate-citymodel/: CMakeLists.txt  vc-generate-citymodel.cpp
vc-generate-citymodel/cmake/: FindLibLAS.cmake  FindPROJ4.cmake  FindShapeLib.cmake
vc-generate-heightmap/: CMakeLists.txt  vc-generate-heightmap.cpp
vc-generate-mesh/: CMakeLists.txt  LaplacianSmoother.ufl  LinearSpace2D.ufl  Mesh.h  MeshGenerator.h  MeshSmoother.h  Point.h  Simplex.h  XML.h  vc-generate-mesh-batch  vc-generate-mesh.cpp  vc-plot-mesh
(+743 files in other folders)
