[build-system]
requires = ["scikit-build-core", "pybind11==2.10.*", "wheel"]
build-backend = "scikit_build_core.build"

[project]
version = "0.7.21"
name = "dtcc-builder"
description = "DTCC Builder"
readme = "README.md"
authors = [
  { name = "Anders Logg", email = "logg@chalmers.se" },
  { name = "Vasilis Naserentin", email = "vasilis.naserentin@chalmers.se" },
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
  { name = "George Spaias" , email= "gspaiasa@ece.auth.gr" },
  { name = "Jens Olsson" , email= "jens.olsson@chalmersindustriteknik.se" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pybind11 >= 2.10.0, < 2.11.0",
  "numpy",
  "dtcc-model >= 0.7.21",
  "dtcc-io >= 0.7.21",
  "dtcc-wrangler >= 0.7.21",
  "dtcc-common >= 0.7.21",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
dtcc-build = "dtcc_builder.scripts:dtcc_build.main"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
