[build-system]
requires = ["scikit-build-core", "pybind11==2.10.*", "wheel"]
build-backend = "scikit_build_core.build"

[project]
dependencies = [
  "numpy",
  "psutil",
  "pypoints2grid >= 0.1.9",
  "dtcc-model@git+https://github.com/dtcc-platform/dtcc-model.git@develop",
  "dtcc-io@git+https://github.com/dtcc-platform/dtcc-io.git@develop",
  "dtcc-wrangler@git+https://github.com/dtcc-platform/dtcc-wrangler.git@develop",
  "dtcc-common@git+https://github.com/dtcc-platform/dtcc-common.git@develop",
]

version = "0.7.20"
name = "dtcc-builder"
description = "DTCC Builder"
readme = "README.md"
authors = [
  { name = "Anders Logg", email = "logg@chalmers.se" },
  { name = "Vasilis Naserentin", email = "vasilis.naserentin@chalmers.se" },
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
  { name = "George Spaias", email = "gspaiasa@ece.auth.gr" },
  { name = "Jens Olsson", email = "jens.olsson@chalmersindustriteknik.se" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
dtcc-build = "dtcc_builder.scripts:dtcc_build.main"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
